--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MingBao Lin&#39;s home page">
     <meta name="keywords" content="林明宝, Mingbao Lin" />
-    <title>Mingbao Lin's Homepage--林明宝的个人主页</title>
+    <title>Vivek Singh's Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
         document.addEventListener("DOMContentLoaded", function() {
